fix: Add maven parent first dependencies and disables extension list and add with gradle